# Rad-Hydro

./: CMakeLists.txt
results/: rad_hydro_marshak.plt  rad_hydro_shock_tube.plt  rad_hydro_suolson.plt
src/: eularian_rh_so.hpp  hydro_functions.hpp  main.cpp  rad_functions.hpp
src/first_order/: eularian_rh.hpp  eularian_rh_func.hpp
